# MRGPG3

./: .gitignore  README.md  nohup_loglife.sh  nohup_safetyShutdown.sh  nohup_wheellog.sh  reboot.sh  shutdown.sh
config/: crontab-e
plib/: battery.py  cleanlifelog.py  daveDataJson.py  leds.py  lifeLog.py  loglife.py  myPyLib.py  myconfig.py  piper.sh  print_gpg3_config_json.py  rosbotDataJson.py  runLog.py  safetyShutdown.py  safetyShutdown.py.bak  speak.py  status.py  status.py.bak  wheellog.py  write_gpg3_config_json.py
save/: README.md  daveData.json
systests/cpp/: README.md
systests/cpp/NewGoPiGo3_Software_C/: GoPiGo3.cpp  README.md  clean.sh
systests/cpp/gopigo3proj/: EasyGoPiGo3.md  README.md  build_gopigo3proj.sh  clean.sh
systests/cpp/gopigo3proj/Examples/: CMakeLists.txt
systests/cpp/gopigo3proj/Examples/src/: testEasyGoPiGo3.cpp  testEasyGoPiGo3.cpp.1st
systests/cpp/gopigo3proj/gopigo3_cpp/: CMakeLists.txt  README.md
systests/cpp/gopigo3proj/gopigo3_cpp/include/: EasyGoPiGo3.h  GoPiGo3.h
systests/cpp/gopigo3proj/gopigo3_cpp/src/: EasyGoPiGo3.cpp
systests/cpp/gopigo3proj/robot/: CMakeLists.txt
systests/cpp/gopigo3proj/robot/src/: myrobot.cpp
systests/gpg_config/: README.md  print_gpg3_config.py  update_gpg3_config.py  wheelBaseRotateTest.py  wheelDiaDriveTest.py
systests/noinit/: new_noinit_easygopigo3.py
utils/: logMaintenance.py  odostats.sh  print_daveDataJson.py  totalTravel.sh  totallife.sh  wheelstats.sh
